Fix spacing issue on tablet + mobile footer

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -542,7 +542,7 @@ tr {
 }
 
 @media(max-width:992px) {
-  .navbar .nav-link {
+  #navbar-collapse .nav-link {
     padding-left: 10px;
   }
 }
